--- a/demo_paper/demo_paper.tex
+++ b/demo_paper/demo_paper.tex
@@ -10,7 +10,7 @@ Fielding introduced RESTful APIs as a versatile mechanism for connecting interne
 
 Automated solutions exist for documentation of local APIs within the context of classes, and methods. For example, JavaDoc can automatically generate the documentation for Java APIs. For RESTful APIs, instead of classes and objects, the context of APIs are defined by API endpoints, resources, actions, and example API calls in terms of the HTTP headers, request and response payload formats \cite{Danielsen_validation}. The existing tools for documenting local APIs do not natively support the different context for RESTful APIs and cannot be readily used to document RESTful APIs.
 
-In this paper we present SpyREST which provides the necessary tool support to address the unique needs for RESTful API documentation. To this regard, in the next section we have discussed the design goals followed by a HTTP proxy server based prototype implementation to demonstrate an automated RESTful API documentation tool. We then present two use cases to show how API developers can use SpyREST to automatically generate and maintain RESTful API documentation. In the discussion, we compare SpyREST against other tools. We provide an analysis of how the requirements for SpyREST are derived in the related work section.
+In this paper we present SpyREST which provides the necessary tool support to address the unique needs for RESTful API documentation. In this regard, in the next section we discuss the design goals followed by a HTTP proxy server based prototype implementation to demonstrate an automated RESTful API documentation tool. We then present two use cases to show how API developers can use SpyREST to automatically generate and maintain RESTful API documentation. In the discussion, we compare SpyREST against other tools. We provide an analysis of how the requirements for SpyREST are derived in the related work section.
 
 \section{SpyREST}
 
@@ -142,7 +142,7 @@ Most general purpose API documentation tools such as JavaDoc extract documentati
 
 SpyREST offers unique features compared to other RESTful API documentation services. Swagger\footnote{https://github.com/swagger-api/swagger-spec/blob/master/versions/2.0.md} and Blueprint\footnote{https://github.com/apiaryio/api-blueprint} are two software as a service tools for RESTful API documentation. The key difference between SpyREST and these tools is in the underlying approach used. These tools require the API developers to follow custom vendor specific API specification formats to describe the API objects. Once the APIs are described, the tools can auto-generate the documentations for the APIs. There is no automated tool support to generate the required API description in the vendor specific formats. Thus manual effort is required to produce the required API specifications and maintain it over time. SpyREST does not require any intermediate API specification as data is sourced for the documentation based on live API calls. Swagger and Blueprint do not support a self-hosted service to document RESTful APIs whereas SpyREST allows a self-hosted service to document RESTful APIs that cannot be externally shared for confidentiality issues.
 
-The technology choice behind for our implementation of SpyREST components is based on our past experience of using these tools but the concepts behind SpyREST is not dependent on the aforementioned technology choice. As a proof of concept, SpyREST only analyzes JSON based API request and response payloads.
+The technology choice behind our implementation of SpyREST components is based on our past experience of using these tools but the concepts behind SpyREST is not dependent on the aforementioned technology choice. As a proof of concept, SpyREST only analyzes JSON based API request and response payloads.
 
 SpyREST is a proof of concept implementation for a novel RESTful API documentation technique. We identify the following limitations. SpyREST has yet to be evaluated. We plan to evaluate SpyREST with a large number of RESTful APIs as well as conduct a user evaluation involving API developers to understand the strengths and weaknesses of our tool. The current implementation of SpyREST only works on JSON based RESTful APIs. SpyREST needs to be enhanced to support other data types such as XML, and CSV. SpyREST, like other HTTP proxy servers, performs an intentional ``man in the middle attack'' to intercept HTTP traffic for example API calls over SSL/TLS. We consider the security impact of this approach to be low since the data is commonly meant to be included in documentation for public use. Otherwise, API developers can use the self-hosted mode and provide SpyREST with the required SSL keys. Web APIs often include a set of commonly used error responses across a variety of API endpoints. Additional work is required on SpyREST to automatically provide a summary of error responses based on example API calls. SpyREST also needs to be extended to support auto-linking between different API endpoints so that API developers can navigate between related API documentations.
 
