--- a/spy_rest/spy_rest.tex
+++ b/spy_rest/spy_rest.tex
@@ -64,7 +64,7 @@ The following list of requirements for SpyREST, R1-7, in priority order, is deri
 
   \textbf{R6 - Reusable}: SpyREST needs to work as a reusable platform so that multiple REST API documentations can be generated and published on a single platform to get the advantages of a SaaS platform \cite{Stepalina_saas}.
 
-  \textbf{R7 - Collaborative}: SpyREST needs to allow people to collaborate on the API documentation so that questions and answers about APIs can coexist with the API documentation to to overcome the knowledge fragmentation \cite{Chen_who_asked}.
+  \textbf{R7 - Collaborative}: SpyREST needs to allow people to collaborate on the API documentation so that questions and answers about APIs can coexist with the API documentation to overcome the knowledge fragmentation \cite{Chen_who_asked}.
 
 
 \subsection{Design} % (fold)
@@ -160,7 +160,7 @@ The auto generated API documentation features two sections, a summary section as
 
 \section{SpyREST Case Study}
 \label{sec:case_study}
-In this section we discuss a case study of using SpyREST to auto generate documentation for 25 API actions randomly sampled from three RESTful API providers. These 25 API APIs are documented using 272 lines of code\footnote{\url{https://github.com/smsohan/spyrest_examples}}. These three API providers are: GitHub.com, KISSMetrics.com (Online analytics tool), and LiquidPlanner.com (Online project management tool).
+In this section we discuss a case study of using SpyREST to auto generate documentation for 25 API actions randomly sampled from three RESTful API providers. These 25 APIs are documented using 272 lines of code\footnote{\url{https://github.com/smsohan/spyrest_examples}}. These three API providers are: GitHub.com, KISSMetrics.com (Online analytics tool), and LiquidPlanner.com (Online project management tool).
 
 \subsection{SpyREST Documentation vs. Official Documentation} % (fold)
 \label{sub:spyrest_vs_official_documentation}
