--- a/introduction.tex
+++ b/introduction.tex
@@ -89,19 +89,19 @@ Currently, the process of documenting REST APIs is largely manual. Conceptually,
 The steps S1-S6 are repeated for every API action that needs to be documented, and S1-S7 need to repeated for every version of the REST API as it evolves. As depicted here, this manual process can be both time consuming and error-prone.
 
 \section{Research Goals}
-The overarching goal of my research is to improve the current state of the process of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aimed to solve the following research goals:
+The overarching goal of my research is to improve the current state of the process of REST API documentation process by automating the repeating manual steps in the aforementioned workflow. More specifically, I aim to solve the following research goals:
 
 \begin{itemize}
-  \item \textit{RG1: To identify a set of REST API documentation requirements.} Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aimed to identity REST API specific documentation requirements in my research. This has several implications as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planning and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
-  \item \textit{RG2: To develop and evaluate a technique to overcome the commonly observed challenges related to REST API documentation.} I aimed to devise a reusable technique so that REST APIs can be documented following the identified REST API documentation requirements without following manual or bespoke methods. It has the following implications: REST API developers can utilize the technique to overcome the common challenges with the generation and maintenance of their API documentation, and REST API client developers can access an API documentation.
+  \item \textit{RG1: To identify a set of REST API documentation requirements.} Existing research on API usability has derived a number of API documentation requirements primarily focusing on local APIs. Due to the structural and implementation differences between local and REST APIs, I aim to identity REST API specific documentation requirements in my research. This has several implications as follows: having access to a scientifically derived list of REST API documentation requirements allows REST API developers to make an informed decision related to planning and execution of their documentation efforts. The requirements provide a background research that can be used by practitioners to compare and contrast existing REST API documentation tools while selecting an appropriate tool for their API. REST API documentation tool developers can also use the requirements to build necessary features.
+  \item \textit{RG2: To develop and evaluate a technique to overcome the commonly observed challenges related to REST API documentation.} I aim to devise a reusable technique so that REST APIs can be documented following the identified REST API documentation requirements without following manual or bespoke methods. It has the following implications: REST API developers can utilize the technique to overcome the common challenges with the generation and maintenance of their API documentation, and REST API client developers can access an API documentation.
 \end{itemize}
 
 
 \section{Research Objectives}
-Related to RG1 and RG2, I aimed to address the following research questions as my objectives:
+Related to RG1 and RG2, I aim to address the following research questions as my objectives:
 
 \begin{itemize}
-  \item \textit{RO1: How are evolving REST APIs documented?} This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the proposed solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
+  \item \textit{RO1: How are evolving REST APIs documented?} This question is aimed to analyze the gap between current industry practice around the documentation of evolving REST APIs and the propose solutions from existing literature. This objective helped me to identify the research opportunity to work on unresolved problems related to REST API documentation.
   \item \textit{RO2: What are the requirements for usable REST API documentation?} This objective provides a necessary background for improving the state of REST API documentation process.
   \item \textit{RO3: What technique can be used to document REST APIs to meet the requirements?} This is the central research objective. I researched to develop a new technique that can fill the gap between existing REST API documentation methods and the identified requirements.
   \item \textit{RO4: Is the proposed technique a practical one for REST API developers?} A qualitative evaluation of the proposed technique in a real-world setup is needed to understand the feasibility and the shortcomings of the proposed technique from the perspective of the REST API developers.
