adds ethics certificate

--- a/appendix.tex
+++ b/appendix.tex
@@ -506,3 +506,9 @@
  \centering
  \includegraphics[width=\textwidth]{copyrights/cisco_paper.pdf}
 \end{figure}
+\chapter{Ethics Certificate}
+\label{ethics}
+\begin{figure}
+ \centering
+ \includegraphics[width=\textwidth]{ethics.pdf}
+\end{figure}
