--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -33,7 +33,7 @@ This research is aimed at answering the following question:
 \section{Methodology} % (fold)
 \label{sec:method}
 
-To answer the aforementioned research question, the study has the following requirements:
+To answer the aforementioned research question, the study has the following requirements (Ethics Certificate in Appendix~\ref{ethics}):
 
 \begin{itemize}
   \item \textbf{R1. Representative API.} We had to choose an existing REST API that is currently used by API client developers. Selecting a mature REST API for this study reduces the possibility that the obstacles we observe in the study are the results of insignificant accidental problems symptomatic of an immature technology. We selected a familiar domain so that participants are able to relate to the API features without requiring upfront training. In addition to selecting the API, we had to select tasks that are related to the core features provided by the API to represent a common usage area of the API.
